# calculator

./: README.md  hodnoceni.txt  skutecnost.txt
plan/: xcapkar00_xcernim00_xgajdo33_xnavram00_plan.txt
src/: Cargo.toml  Makefile  perf.data.old
src/calculator/src/: help.html  index.html  main.js  styles.css
src/calculator/src-tauri/: Cargo.toml  tauri.conf.json
src/calculator/src-tauri/src/: main.rs
src/math_lib/src/: execute.rs  lib.rs  parser.rs
src/profiling/: Cargo.toml  test_case_10.txt  test_case_1000.txt
src/profiling/src/: main.rs  tests.rs
